--- a/trunk/style_mnmlist.css
+++ b/trunk/style_mnmlist.css
@@ -210,14 +210,17 @@ a.done>div.likes{background-image:url("./images/icon-liked.gif")}
 /* 1.3 dpr */
 @media (-webkit-min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi){ 
     .blog-logo{background:url('./images/blog-logo-960.png') no-repeat;width:200px;height:80px;background-size: 200px 80px;}
+    .body{background-image:url('./images/blog-logo-960.png');background-size: 50px 20px;}
 }
 
 /* 1.5 dpr */
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi){ 
     /* Retina-specific stuff here */
     .blog-logo{background:url('./images/blog-logo-960.png') no-repeat;width:200px;height:80px;background-size: 200px 80px;}
+    .body{background-image:url('./images/blog-logo-960.png');background-size: 50px 20px;}
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 
     /* Retina-specific stuff here */
     .blog-logo{background:url('./images/blog-logo-retina.png') no-repeat;width:200px;height:80px;background-size: 200px 80px;}
+    .body{background-image:url('./images/blog-logo-960.png');background-size: 50px 20px;}
 }
